remove support for python2 from package.xml

--- a/package.xml
+++ b/package.xml
@@ -18,8 +18,7 @@
 
   <author email="wieser@mit.edu">Eric Wieser</author>
 
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
+  <exec_depend>python3-numpy</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
